--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,8 @@
 tasks:
+  - init: |
+      export AWS_ACCESS_KEY_ID=AKIA5UED4QYFFC6YEUKM
+      export AWS_SECRET_ACCESS_KEY=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
+      export AWS_DEFAULT_REGION=us-west-2
   - name: aws-cli
     env:
       AWS_CLI_AUTO_PROMPT: on-partial
