--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,8 +1,12 @@
 tasks:
   - init: |
-      export AWS_ACCESS_KEY_ID=AKIA5UED4QYFFC6YEUKM
-      export AWS_SECRET_ACCESS_KEY=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
-      export AWS_DEFAULT_REGION=us-west-2
+      if [ -f .env ]; then
+        export $(grep -v '^#' .env | xargs)
+      fi
+      echo "AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID"
+      echo "AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY"
+      echo "AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION"
+
   - name: aws-cli
     env:
       AWS_CLI_AUTO_PROMPT: on-partial
@@ -12,6 +16,7 @@ tasks:
       unzip awscliv2.zip
       sudo ./aws/install
       cd $THEIA_WORKSPACE_ROOT
+
 vscode:
   extensions:
     - 42Crunch.vscode-openapi
